# RCompiler

./: .gitignore  CMakeLists.txt  DEBUG_README.md  analyze_debug_log.py  bultinmethod.txt  comprehensive47_output.ll  controlflow.txt  debug_basic20.sh  debug_output2.ll  debug_program  debug_program4  debug_test.rx  test_aggregate_ptr.rx  test_array4.rx  test_array_correct.rx  test_associativity.rx  test_basic20_simple.sh  test_complete.rx  test_complete_output.ll  test_nested_function_sret.rx  test_output.ll  test_output_final.ll  test_program  test_program_final  test_program_final2  test_program_fixed  test_return_slot.rx  test_self.rx  test_simple.rx  test_struct_expr.rx  test_to_string.rx  调试报告_类型检查阶段.md
.cache/clangd/index/: lexser.cpp.D12FE84FFF397EF1.idx  lexser.hpp.DBCC9752B245E315.idx
.github/workflows/: cpp_test.yml
docs/: blockexpression_tail_expression_analysis.md  exit.txt  semanticsolution.md  表达式类型分析错误报告_最终版.md
docs/ir/: README.md  SUMMARY.md  component_interaction.md  overall_workflow.md
docs/ir/builtindeclarator/: README.md
docs/ir/expressiongenerator/: README.md
docs/ir/functioncodegen/: README.md
docs/ir/irbuilder/: README.md
docs/ir/irgenerator/: README.md
docs/ir/statementgenerator/: README.md
docs/ir/typemapper/: README.md
docs/lexer/: README.md  SUMMARY.md  component_interaction.md  implementation_details.md
docs/others/: builtinfunction.txt
docs/parser/: README.md  SUMMARY.md  parser_comprehensive_analysis.md
docs/semantic/: README.md  SUMMARY.md  component_interaction.md  overall_workflow.md
docs/semantic/constevaluator/: README.md
docs/semantic/controlflow/: README.md
docs/semantic/symbolcollection/: README.md
docs/semantic/typecheck/: README.md
include/: astnodes.hpp  builtindeclarator.hpp  constevaluator.hpp  controlflow.hpp  expressiongenerator.hpp  functioncodegen.hpp  irbuilder.hpp  irgenerator.hpp  lexer.hpp  lexser.hpp  parser.hpp  scope.hpp  semantic.hpp  statementgenerator.hpp  symbol.hpp  symbolcollection.hpp  symboltable.hpp  typecheck.hpp  typeinference.hpp  typemapper.hpp  typewrapper.hpp  visitor.hpp  visitorforward.hpp
runbat/: README_EVALUATION.md  evaluate_ir_tests.py  evaluate_tests.py  evaluate_tests2.py  ir-testreport.md  ir_test_report_20251211_223720.md  ir_test_report_20251215_182239.md  ir_test_report_20251215_204008.md  ir_test_report_20251217_221647.md  ir_test_report_20251217_232034.md  ir_test_report_20251218_012936.md  ir_test_report_20251218_015537.md  ir_test_report_20251218_021427.md  ir_test_report_20251218_155606.md  ir_test_report_20251218_160713.md  ir_test_report_20251218_174100.md  ir_test_report_20251218_201553.md  ir_test_report_20251218_210316.md  ir_test_report_20251219_092549.md  ir_test_report_20251219_181938.md  ir_test_report_20251219_210702.md  ir_test_report_20251219_212436.md  ir_test_report_20251220_005622.md  ir_test_report_20251220_022313.md  ir_test_report_20251220_174946.md  ir_test_report_20251220_181832.md  ir_test_report_20251222_113513.md  ir_test_report_20251222_200319.md  ir_test_report_20251222_222907.md  ir_test_report_20251222_232352.md  ir_test_report_20251223_000808.md  ir_test_report_20251223_015159.md  ir_test_report_20251223_215824.md  ir_test_report_20251223_221301.md  ir_test_report_20251223_225521.md  ir_test_report_20251223_234413.md  semantic1-testreport.md  semantic2-testreport.md  test_report_20251013_112843.md  test_report_20251015_113251.md  (+66 more)
src/: astnode.cpp  builtindeclarator.cpp  constevaluator.cpp  controlflow.cpp  expressiongenerator.cpp  functioncodegen.cpp  irbuilder.cpp  irgenerator.cpp  lexer.cpp  lexser.cpp  lexsertest.cpp  main.cpp  parser.cpp  semantic.cpp  semanticmain.cpp  semanticmain.cpp.deprecated  statementgenerator.cpp  symbolcollection.cpp  symboltable.cpp  typecheck.cpp  typeinference.cpp  typemapper.cpp  typewrapper.cpp
tests/: CMakeLists.txt  builtindeclarator_test.cpp  expressiongenerator_test.cpp  functioncodegen_test.cpp  irbuilder_test.cpp  irgenerator_test.cpp  lexer_test.cpp  parser_test.cpp  statementgenerator_test.cpp  test.ans  test.rx  test_aggregate_param.rx  test_main.cpp  test_pointer_params.rx  test_self_params.rx  test_self_simple.rx  typemapper_test.cpp
visualization/: CMakeLists.txt  README_Graph_Visualizer.md  ast_graph_visualizer.cpp  ast_graph_visualizer.hpp  ast_graph_visualizer_main.cpp
